--- a/projekt_domen.Rmd
+++ b/projekt_domen.Rmd
@@ -24,9 +24,16 @@ source("lib/libraries.r", encoding="UTF-8")
 source("lib/rstudio.r", encoding="UTF-8")
 ```
 
-# Izbira teme
+# Uvod
 
-Analiza transporta v Evropi:
+V projektu bom analiziral različne načine transporta ljudi in blaga v evropskih državah ter vplih le-teh na okolje in varnost v prometu.
+
+Skozi analize podatkov bom skušal poiskati povezave med priljubljenostjo določene vrste transporta ter gospodarsko razvitostjo države. Prav tako bom primerjal vrste transporta glede na njihovo varnost, ter obravnaval vpliv transporta na okolje.
+
+Glavni cilji moje analize bodo, da bi za vsako od evropskih držav poiskal najbolj varen način transporta in tistega, ki je okolju najbolj prijazen ter ugotoviti, ali obstaja povezava med gospodarsko razvitostjo države in vrsto transporta, ki jo prebivalci največ uporabljajo. Prikazal bom tudi, kako so se deleži uporabe različnih tipov transporta spreminjali v zadnjih 10 letih.
+
+
+Nekatere primerjave in analize:
   - primerjava med posameznimi državami glede na to kolikšen delež ljudi uporablja določeno vrsto      transporta,
   - primerjava med posameznimi državami glede na to kako prometno varna je katera, primerjava tudi     med prevoznimi sredstvi
   - primerjava količine toplogrednih plinov v posameznih državah in iskanje povezave s prometom        (npr. države kjer manjši delež ljudi uporablja javni potniški promet ima v zraku več               toplogrednih plinov)
@@ -40,23 +47,24 @@ Analiza transporta v Evropi:
 source("uvoz/uvoz_domen.r", encoding="UTF-8")
 ```
 
-Podatke za svoj projekt sem poiskal na spletnih straneh Eurostata in jih shranil kot CSV datoteke. Pridobljene podatke sem nato uredil in jih zbral v več razpredelnicah v obliki *tidy data*.
+Uporabil bom podatke, ki sem jih pridobil na spletnih straneh Eurostata 
+Podatke za svoj projekt sem poiskal na spletnih straneh Eurostata in opisujejo obdobje od leta 2007 do 2016. Podatke sem najprej shranil kot CSV datoteke, nato pa jih uredil in jih zbral v več razpredelnicah v obliki *tidy data*.
 
-Tabela 1 (Kolikšen delež ljudi uporablja določeno prevozno sredstvo):
-  - 'Leto' - spremenljivka: leto
-  - 'Drzava' - spremenljivka: ime države
-  - 'Prevozno_sredstvo' - spremenljivka: 3 prevozna sredstva
-  - 'Delez' - meritev: delež ljudi, ki uporabljajo določeno prevozno sredstvo
+Tabela 1 (delez_ljudi: Kolikšen delež ljudi uporablja določeno prevozno sredstvo):
+- 'Leto' - spremenljivka: leto
+- 'Drzava' - spremenljivka: ime države
+- 'Prevozno_sredstvo' - spremenljivka: 3 prevozna sredstva
+- 'Delez' - meritev: delež ljudi, ki uporabljajo določeno prevozno sredstvo
 
-Tabela 2 (Katera izmed evropskih držav je prometno najvarnejša):
-  - 'Leto' - spremenljivka: leto
-  - 'Drzava' - spremenljivka: ime države
-  - 'Smrti_pmio' - meritev: število smrti v prometu na milijon ljudi
+Tabela 2 (smrti_pmio: Katera izmed evropskih držav je prometno najvarnejša):
+- 'Leto' - spremenljivka: leto
+- 'Drzava' - spremenljivka: ime države
+- 'Smrti_pmio' - meritev: število smrti v prometu na milijon ljudi
   
-Tabela 3 (Kako velik vpliv na onesnaženost ozračja ima promet):
-  - 'Leto' - spremenljivka: leto
-  - 'Drzava' - spremenljivka: ime države
-  - 'Kolicina_kg_na_mio' - meritev: količina toplogrednih plinov v kg na milijon ljudi
+Tabela 3 (gas_pmio: Kako velik vpliv na onesnaženost ozračja ima promet):
+- 'Leto' - spremenljivka: leto
+- 'Drzava' - spremenljivka: ime države
+- 'Kolicina_kg_na_mio' - meritev: količina toplogrednih plinov v kg na milijon ljudi
   
 
 Sestavil sem še nekaj tabel, ki pa sem jih potreboval le za vmesne korake, in niso pomembne za končne rezultate analize.
@@ -67,15 +75,28 @@ Sestavil sem še nekaj tabel, ki pa sem jih potreboval le za vmesne korake, in n
 # Analiza in vizualizacija podatkov
 
 ```{r vizualizacija, echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
-source("vizualizacija/vizualizacija_domen.r", encoding="UTF-8")
+source("vizualizacija/vizualizacija_domen.R", encoding="UTF-8")
 ```
 
 
 Na spodnjem grafu je prikazano, kolikšen delež ljudi v določeni državi in letu uporablja eno izmed analiziranih vrst transporta.
 
-```{r line, echo=FALSE, message=FALSE, fig.align='center', fig.cap='Delezi uporabe prevoznih     sredstev v Evropskih državah'} 
+```{r line, echo=FALSE, message=FALSE, fig.align='center', fig.cap='Deleži uporabe prevoznih     sredstev v Evropskih državah'} 
 graf_delez_ljudi
 ```
+
+```{r graf_gas_pmio, echo=FALSE, message=FALSE, fig.align='center',  warning=FALSE, fig.cap='Količina toplogrednih plinov v ozračju'} 
+graf_gas_pmio
+```
+
+Če pogledamo oba grafa lahko v več primerih držav vidimo, da najverjetneje obstaja povezavo med količino toplogrednih plinov v ozračju in tem, katero vrsto transporta uporabljajo prebivalci določene države (npr. kjer se je zmanjšal delež uporabe osebnih avtomobilov se je enako zgodilo tudi s količino toplogrednih plinov v ozračju).
+
+
+```{r graf_smrti, echo=FALSE, message=FALSE, fig.align='center',  warning=FALSE, fig.cap='Število smrti v prometnih nesrečah na milijon prebivalcev'} 
+graf_smrti
+```
+
+Iz grafa je razvidno, da gre v veliki večini nesreč za nesreče osebnih avtomobilov, kar pa je pričakovano, saj je tudi delež uporabe avtomobilov daleč največji. Zanimivo je, da so v mnogih državah kljub temu da več ljudi uporablja vlake kot avtobuse, slednji udeleženi v manj nesrečah s smrtnim izidom.
 
 
 Zemljevid Evrope
