--- a/projekt_domen.Rmd
+++ b/projekt_domen.Rmd
@@ -32,12 +32,12 @@ Skozi analize podatkov bom skušal poiskati povezave med priljubljenostjo določ
 
 Glavni cilji moje analize bodo, da bi za vsako od evropskih držav poiskal najbolj varen način transporta in tistega, ki je okolju najbolj prijazen ter ugotoviti, ali obstaja povezava med gospodarsko razvitostjo države in vrsto transporta, ki jo prebivalci največ uporabljajo. Prikazal bom tudi, kako so se deleži uporabe različnih tipov transporta spreminjali v zadnjih 10 letih.
 
-
 Nekatere primerjave in analize:
-  - primerjava med posameznimi državami glede na to kolikšen delež ljudi uporablja določeno vrsto      transporta,
-  - primerjava med posameznimi državami glede na to kako prometno varna je katera, primerjava tudi     med prevoznimi sredstvi
-  - primerjava količine toplogrednih plinov v posameznih državah in iskanje povezave s prometom        (npr. države kjer manjši delež ljudi uporablja javni potniški promet ima v zraku več               toplogrednih plinov)
-  - analiza povezave med gospodarsko razvitostjo države in uporabo javnega potniškega prometa (npr.     v državah z višjim BDPpc ljudje več uporabljajo javni potniški promet)
+
+- primerjava med posameznimi državami glede na to kolikšen delež ljudi uporablja določeno vrsto transporta,
+- primerjava med posameznimi državami glede na to kako prometno varna je katera, primerjava tudi med prevoznimi sredstvi
+- primerjava količine toplogrednih plinov v posameznih državah in iskanje povezave s prometom (npr. države kjer manjši delež ljudi uporablja javni potniški promet ima v zraku več toplogrednih plinov)
+- analiza povezave med gospodarsko razvitostjo države in uporabo javnega potniškega prometa (npr. v državah z višjim BDPpc ljudje več uporabljajo javni potniški promet)
 
 ***
 
@@ -51,17 +51,20 @@ Uporabil bom podatke, ki sem jih pridobil na spletnih straneh Eurostata
 Podatke za svoj projekt sem poiskal na spletnih straneh Eurostata in opisujejo obdobje od leta 2007 do 2016. Podatke sem najprej shranil kot CSV datoteke, nato pa jih uredil in jih zbral v več razpredelnicah v obliki *tidy data*.
 
 Tabela 1 (delez_ljudi: Kolikšen delež ljudi uporablja določeno prevozno sredstvo):
+
 - 'Leto' - spremenljivka: leto
 - 'Drzava' - spremenljivka: ime države
 - 'Prevozno_sredstvo' - spremenljivka: 3 prevozna sredstva
 - 'Delez' - meritev: delež ljudi, ki uporabljajo določeno prevozno sredstvo
 
 Tabela 2 (smrti_pmio: Katera izmed evropskih držav je prometno najvarnejša):
+
 - 'Leto' - spremenljivka: leto
 - 'Drzava' - spremenljivka: ime države
 - 'Smrti_pmio' - meritev: število smrti v prometu na milijon ljudi
   
 Tabela 3 (gas_pmio: Kako velik vpliv na onesnaženost ozračja ima promet):
+
 - 'Leto' - spremenljivka: leto
 - 'Drzava' - spremenljivka: ime države
 - 'Kolicina_kg_na_mio' - meritev: količina toplogrednih plinov v kg na milijon ljudi
@@ -81,18 +84,18 @@ source("vizualizacija/vizualizacija_domen.R", encoding="UTF-8")
 
 Na spodnjem grafu je prikazano, kolikšen delež ljudi v določeni državi in letu uporablja eno izmed analiziranih vrst transporta.
 
-```{r line, echo=FALSE, message=FALSE, fig.align='center', fig.cap='Deleži uporabe prevoznih     sredstev v Evropskih državah'} 
+```{r graf_delez_ljudi, echo=FALSE, message=FALSE, fig.align='center', fig.height=20,  fig.cap='Deleži uporabe prevoznih sredstev v Evropskih državah'} 
 graf_delez_ljudi
 ```
 
-```{r graf_gas_pmio, echo=FALSE, message=FALSE, fig.align='center',  warning=FALSE, fig.cap='Količina toplogrednih plinov v ozračju'} 
+```{r graf_gas_pmio, echo=FALSE, message=FALSE, fig.align='center', warning=FALSE, fig.cap='Količina toplogrednih plinov v ozračju'} 
 graf_gas_pmio
 ```
 
 Če pogledamo oba grafa lahko v več primerih držav vidimo, da najverjetneje obstaja povezavo med količino toplogrednih plinov v ozračju in tem, katero vrsto transporta uporabljajo prebivalci določene države (npr. kjer se je zmanjšal delež uporabe osebnih avtomobilov se je enako zgodilo tudi s količino toplogrednih plinov v ozračju).
 
 
-```{r graf_smrti, echo=FALSE, message=FALSE, fig.align='center',  warning=FALSE, fig.cap='Število smrti v prometnih nesrečah na milijon prebivalcev'} 
+```{r graf_smrti, echo=FALSE, message=FALSE, fig.align='center', fig.height=20, warning=FALSE, fig.cap='Število smrti v prometnih nesrečah na milijon prebivalcev'} 
 graf_smrti
 ```
 
@@ -102,28 +105,24 @@ Iz grafa je razvidno, da gre v veliki večini nesreč za nesreče osebnih avtomo
 Zemljevid Evrope
 
 ```{r zemljevid, echo=FALSE, fig.align='center', fig.cap='Zemljevid Evrope'}
-graf_europe
+
+zemljevid_smrti_sum_pmio_2016
 ```
 
 ***
 
-<!-- # Napredna analiza podatkov -->
+# Napredna analiza podatkov
 
-<!-- ```{r analiza, echo=FALSE, message=FALSE} -->
-<!-- source("analiza/analiza.r", encoding="UTF-8") -->
-<!-- ``` -->
+```{r analiza, echo=FALSE, message=FALSE}
+source("analiza/analiza_domen.R", encoding="UTF-8")
+```
 
-<!-- Spodnji graf prikazuje povezavo med številom naselij in površino občine. -->
+Spodnji graf prikazuje povezavo med številom naselij in površino občine.
 
-<!-- ```{r graf, echo=FALSE, fig.align='center', fig.cap='Povezava med številom naselij in površino občine'} -->
-<!-- ggplot(inner_join(obcine, data.frame(obcina=names(skupine), -->
-<!--                                      skupina=factor(skupine)), by="obcina") -->
-<!-- , aes(x=povrsina, y=naselja, color=skupina, size=prebivalci/1000)) + geom_point() + -->
-<!--   ggtitle("Število naselij glede na površino občine") + -->
-<!--   xlab(expression("Površina (km"^2 * ")")) + ylab("Št. naselij") + -->
-<!--   guides(color=guide_legend(title="Skupina"), -->
-<!--          size=guide_legend(title="Prebivalci (* 1000)")) -->
-<!-- ``` -->
+```{r graf regresija, echo=FALSE, fig.align='center', fig.cap='Napoved števila smrti v prometu v naslednjih letih', warning=FALSE}
+
+graf_regresija
+```
 
 ***
 
