--- a/projekt_domen.Rmd
+++ b/projekt_domen.Rmd
@@ -17,6 +17,8 @@ output:
 
 # Uvoz vseh potrebnih knjižnic
 source("lib/libraries.r", encoding="UTF-8")
+
+Sys.setlocale("LC_ALL","Slovenian")
 ```
 
 ![](http://fojopinestar.com/images/image_contact.png)
